crates/turborepo/tests/snapshots/task_dependencies__workspace_tasks_build1_graph.snap
---
source: crates/turborepo/tests/task_dependencies.rs
expression: stdout.to_string()
---
digraph {
	compound = "true"
	newrank = "true"
	subgraph "root" {
		"[root] //#build1" -> "[root] ___ROOT___"
		"[root] workspace-a#build1" -> "[root] ___ROOT___"
		"[root] workspace-b#build1" -> "[root] ___ROOT___"
	}
}
