crates/turborepo/tests/snapshots/task_dependencies__workspace_tasks_build2_graph.snap
---
source: crates/turborepo/tests/task_dependencies.rs
expression: stdout.to_string()
---
digraph {
	compound = "true"
	newrank = "true"
	subgraph "root" {
		"[root] //#exists" -> "[root] ___ROOT___"
		"[root] workspace-a#build2" -> "[root] //#exists"
		"[root] workspace-a#build2" -> "[root] workspace-b#build2"
		"[root] workspace-b#build2" -> "[root] //#exists"
	}
}
