crates/turborepo/tests/snapshots/task_dependencies__workspace_tasks_special_graph.snap
---
source: crates/turborepo/tests/task_dependencies.rs
expression: stdout.to_string()
---
digraph {
	compound = "true"
	newrank = "true"
	subgraph "root" {
		"[root] workspace-a#special" -> "[root] workspace-b#build4"
		"[root] workspace-b#build4" -> "[root] ___ROOT___"
	}
}
